# sealark

./: .bazelrc  .gitignore  .obazlrc  BUILD.bazel  BUILD.bzl  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzl  user.bazelrc
bazel/: BUILD.bazel  bazel_config.c
bindings/lua/: BUILD.bazel  README.md  default.lua  lbazel.c  libmoonlark.c  lmoonlark.c  moonlark.c
bindings/scheme/: BUILD.bazel  README.md  ast_attribs_s7.c  ast_node_s7.c  ast_nodelist_s7.c  libsunlark.c  sunlark_attributes.c  sunlark_bindings.c  sunlark_bindings_mutators.c  sunlark_config.c  sunlark_ctors.c  sunlark_debug.c  sunlark_dictionaries.c  sunlark_dispatcher.c  sunlark_dispatcher_dyads.c  sunlark_dispatcher_pentads.c  sunlark_dispatcher_tetrads.c  sunlark_dispatcher_triads.c  sunlark_errors.c  sunlark_expressors.c  sunlark_filters.c  sunlark_functions.c  sunlark_loadstmts.c  sunlark_macros.c  sunlark_methods.c  sunlark_mutators.c  sunlark_mutators_remove.c  sunlark_node.c  sunlark_nodelist.c  sunlark_package.c  sunlark_parse.c  sunlark_parsers.c  sunlark_paths.c  sunlark_predicators.c  sunlark_properties.c  sunlark_query.c  sunlark_serializers.c  sunlark_target_mutators.c  sunlark_targets.c  sunlark_utils.c  (+2 more)
bindings/scheme/doc/: devguide.md  repl.md
bzl/: user.bazelrc
bzl/host/: BUILD.bazel
data/load/: aliases1comments.BUILD.bazel  load1a.BUILD.bazel
moonlark/: BUILD.bazel  config.c  datadumper.lua  edit.c  moonlark_edit.lua  moonlark_serialize.lua  moonlark_setup.c
moonlark/lua/: BUILD.bazel  ast_walk.lua  edit.lua  pprint.lua  repl.lua  roundtrip.lua  serialize.lua
sealark/: BUILD.bazel  BUILD.bzl  constants.c  debug.c  expressors.c  expressors_load.c  expressors_target.c  lexis.re  mutators.c  nodes.c  parse.c  predicators.c  sealark_binding_mutators.c  sealark_bindings.c  sealark_debug.c  sealark_dictionaries.c  sealark_errors.c  sealark_format.c  sealark_load_stmts.c  sealark_loadstmts.c  sealark_mutators.c  sealark_nodes.c  sealark_package.c  sealark_parsers.c  sealark_predicators.c  sealark_serializers.c  sealark_targets.c  sealark_vectors.c  serialize.c  serializers.c  syntaxis.y  vectors.c
src/: BUILD.bazel  README.md  constants.c  debug.c  emit_bazel.c  emit_build_bazel.c  lexer.re  lexis.re  literals.re  load.re  nodes.c  obazl_starlark.c  obazl_starlark_lexer.re  obazl_starlark_nodes.c  obazl_starlark_serialize.c  parse.c  parser.y  sealark_binding_mutators.c  sealark_bindings.c  sealark_ctors.c  sealark_debug.c  sealark_errors.c  sealark_format.c  sealark_loadstmts.c  sealark_loadstmts_set.c  sealark_nodes.c  sealark_package.c  sealark_parsers.c  sealark_predicators.c  sealark_procs.c  sealark_serializers.c  sealark_targets.c  sealark_vectors.c  serialize.c  starlark.c  syntaxis.y  test_lex.c  test_parse.c  token_debug.c
src/bazel/: BUILD.bazel  bazel_lua.c
src/config/: BUILD.bazel  bazel_config.c
src/lbazel/: BUILD.bazel  lbazel.c
src/lib/lbazel/: BUILD.bazel  lbazel.c
src/lib/moonlark/: BUILD.bazel  dune.lua  libmoonlark.c  moonlark_api.c  moonlark_config.c
src/lib/starlark/: BUILD.bazel  debug.c  lexis.re  nodes.c  parse.c  serialize.c  syntaxis.y
src/lua/: BUILD.bazel  lua_debug.c  starlark_lua.c  starlark_lua_api.c  starlark_lua_config.c
src/test/: BUILD.bazel  lex_keywords.c  lex_numbers.c  syntax_call_expr.c  syntax_dict.c  syntax_expressions.c  syntax_slices.c
sunlark/: BUILD.bazel  edit.c  repl.c
sunlark/scm/: BUILD.bazel  ast_walk.scm  edit.scm
test/: BUILD.bazel  lex_file.c  lex_keywords.c  lex_misc.c  lex_numbers.c  lex_punctuation.c  lex_strings.c  lua_file.c  parse_file.c  roundtrip.c  syntax_call_expr.c  syntax_dict.c  syntax_expressions.c  syntax_lists.c  syntax_slices.c  syntax_statements.c  test_roundtrip.c
test/data/: BUILD.bazel  brstrings.BUILD  load_3.BUILD  test.lex.BUILD  test.lex.BUILD.bazel  test.syntax.BUILD  test.syntax.BUILD.bazel
test/data/cc/: BUILD.bazel  BUILD.test
test/data/comments/: BUILD.test  BUILD.test1
test/data/cpp/: BUILD.bazel  BUILD.test
test/data/dictionaries/: BUILD.actions_run  BUILD.test2
test/data/genrules/: BUILD.lib_sexp
test/data/java/: BUILD.test
test/data/large/: BUILD.test
test/data/load/: BUILD.args  BUILD.test1  BUILD.testsq
test/data/load/comments/: BUILD.bazel
test/data/load/test2/: BUILD.test
test/data/ocaml/: BUILD.bazel  BUILD.test1
test/data/python/: BUILD.bazel
test/data/small/: BUILD.test2  BUILD.test3
test/data/strings/: BUILD.escapes  BUILD.test
test/data/walk/: BUILD.bazel  BUILD.complete  BUILD.load1  BUILD.load2  BUILD.load3  BUILD.load4  BUILD.mix1  BUILD.targets1  BUILD.targets2  BUILD.targets3  BUILD.targets4  BUILD.targets5  BUILD.test  BUILD.test2
test/lua/: BUILD.bazel  lua_file.lua  serialize.lua
test/scm/: ast_walk.scm  edit.scm
test/sys/: BUILD.bazel  moonlark_roundtrip.c  starlark_roundtrip.c  test_moonlark.c  test_starlark.c
test/unit/: BUILD.bazel  lex_keywords.c  lex_numbers.c  lex_punctuation.c  lex_strings.c  roundtrip.c  roundtrip_helper.c  syntax_call_expr.c  syntax_dict.c  syntax_expressions.c  syntax_lists.c  syntax_slices.c  syntax_statements.c
test/unit/parser/: BUILD.bazel  lex_keywords.c  lex_misc.c  lex_numbers.c  lex_punctuation.c  lex_strings.c  syntax_call_expr.c  syntax_dict.c  syntax_expressions.c  syntax_lists.c  syntax_slices.c  syntax_statements.c
test/unit/sealark/: BUILD.bazel  buildfile_expressors.c
test/unit/sunlark/: BUILD.attrs  BUILD.bazel  BUILD.binding_rm  BUILD.bindings  BUILD.bool_set  BUILD.common_props  BUILD.dictionaries  BUILD.loads  BUILD.loadstmts  BUILD.set_bindings  BUILD.strings  BUILD.targets  BUILD.test1  BUILD.vectors  binding_val_strings.c  binding_val_vectors.c  bindings.c  common.c  definitions.c  loads.c  paths_tetradic.c  targets.c  test_attr_set.c  test_binding_get.c  test_binding_rm.c  test_binding_set.c  test_bindings.c  test_bool_set.c  test_common_props.c  test_dictionaries.c  test_dictionary_get.c  test_dictionary_set.c  test_loads.c  test_loadstmts.c  test_make_binding.c  test_make_target.c  test_packages.c  test_parse_string.c  test_set_bindings.c  test_set_bool.c  (+14 more)
(+17 files in other folders)
