load("@bazel_skylib//rules:common_settings.bzl", "string_list_flag")

string_list_flag(name = "debug", build_setting_default = [])
config_setting(name = "debug-ast", flag_values = {":debug": "ast"})
config_setting(name = "debug-bindings", flag_values = {":debug": "bindings"})
config_setting(name = "debug-filters", flag_values = {":debug": "filters"})
config_setting(name = "debug-load", flag_values = {":debug": "load"})
config_setting(name = "debug-mem", flag_values = {":debug": "mem"})
config_setting(name = "debug-loads", flag_values = {":debug": "loads"})
config_setting(name = "debug-mutators", flag_values = {":debug": "mutators"})
config_setting(name = "debug-paths", flag_values = {":debug": "paths"})
config_setting(name = "debug-preds", flag_values = {":debug": "predicates"})
config_setting(name = "debug-properties", flag_values = {":debug": "properties"})
config_setting(name = "debug-queries", flag_values = {":debug": "queries"})
config_setting(name = "debug-s7-api", flag_values = {":debug": "s7-api"})
config_setting(name = "debug-serializers", flag_values = {":debug": "serializers"})
config_setting(name = "debug-set", flag_values = {":debug": "set"})
config_setting(name = "debug-targets", flag_values = {":debug": "targets"})
config_setting(name = "debug-trace", flag_values = {":debug": "trace"})
config_setting(name = "debug-utarrays", flag_values = {":debug": "utarrays"})
config_setting(name = "debug-vectors", flag_values = {":debug": "vectors"})
config_setting(name = "debug-yytrace", flag_values = {":debug": "yytrace"})

