workspace(name = "obazl_tools_obazl")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#############
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.2/bazel-skylib-1.0.2.tar.gz",
    ],
    sha256 = "97e70364e9249702246c0e9444bccdc4b847bed1eb03c5a3ece4f83dfe6abc44",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

################################################################
## META parser tools

load("//:WORKSPACE.bzl", "cc_fetch_repos", "fetch_stardoc")
cc_fetch_repos()

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

## Assumption: build tools (make, autoconf, etc.) are already installed, do not build them
rules_foreign_cc_dependencies(register_built_tools=False)

################################################################
## dev only
# load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")
# stardoc_repositories()
