# exports_files(["config.c"])

cc_binary(
    name  = "edit",
    linkstatic = 1,
    srcs  = [
        "edit.c",
        "edit.h",
    ],
    data = [
        "//moonlark/lua:edit.lua"
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",

        "-I$(GENDIR)/bindings/lua",
        "-I$(GENDIR)/external/moonlark/binding/lua",

        "-I$(GENDIR)/moonlark",
        "-I$(GENDIR)/external/moonlark/moonlark",

        # "-I$(GENDIR)/src/config",
        # "-I$(GENDIR)/external/moonlark/src/config",

        "-I", "$(GENDIR)/src/lib/starlark",
        "-I", "$(GENDIR)external/moonlark/src/lib/starlark",

        "-I", "vendored/logc",
        "-I", "external/moonlark/vendored/logc",

        "-I", "vendored/lua-5.4.3/src",
        "-I", "external/moonlark/vendored/lua-5.4.3/src",

        "-I", "vendored/uthash",
        "-I", "external/moonlark/vendored/uthash",
    ],
    deps = [
        "//bindings/lua:moonlark",
        "//src/config",
        "//vendored/logc",
        "//vendored/uthash",
        "//vendored/lua-5.4.3/src:lua"
    ],
)

# Target //moonlark:repl launches a lua interpreter with integrated moonlark support.
cc_binary(
    name = "repl",
    srcs = [
        # we build the  lua interpreter here ....
        "//vendored/lua-5.4.3/src:lua.c",
        "//vendored/lua-5.4.3/src:lua.h",
    ],
    data = [
        "//moonlark/lua:repl.lua"
    ],
    deps = [
        # lua runtime with integrated moonlark
        "//vendored/lua-5.4.3/src:lualark"
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-pedantic-errors",
    ],
    defines = [
        "LUA_USE_MACOSX",
        "MOONLARK"
    ],
    linkopts = [
        "-lm",
        "-ldl",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "mkhdrs",
    srcs = [
        "edit.c",
        "//bindings/lua:libmoonlark.c",
        "//src/config:bazel_config.c",
        "//src/lib/starlark:mkhdrs-export",
    ],
    outs = [
        "edit.h",
        # "config.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location edit.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location //bindings/lua:libmoonlark.c) \\",
        "    $(location //src/config:bazel_config.c) \\",
        "    $(location //src/lib/starlark:mkhdrs-export) \\",
        "    $(location edit.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
